--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "firebase": "^9.20.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-context": "^0.0.3",
